src/objects/Game_Fruit__c.object
<CustomObject>
    <description>junction object to track fruits purchased each game.</description>
    <fields>
        <fullName>Apple__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Apple</label>
        <referenceTo>Apple__c</referenceTo>
        <relationshipLabel>Game Fruits</relationshipLabel>
        <relationshipName>Game_Fruits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Banana__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Banana</label>
        <referenceTo>Banana__c</referenceTo>
        <relationshipLabel>Game Fruits</relationshipLabel>
        <relationshipName>Game_Fruits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grape__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grape</label>
        <referenceTo>Grape__c</referenceTo>
        <relationshipLabel>Game Fruits</relationshipLabel>
        <relationshipName>Game_Fruits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Orange__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orange</label>
        <referenceTo>Orange__c</referenceTo>
        <relationshipLabel>Game Fruits</relationshipLabel>
        <relationshipName>Game_Fruits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Game Fruit</label>
    <nameField>
        <label>Fruit Purchased Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Game Fruits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>